manifests/k8s/ingress-demo-info.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-v1-sales
  namespace: oi-svc-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target: /api/v1/sales/$4
    # nginx.ingress.kubernetes.io/limit-rpm: '1'
    nginx.ingress.kubernetes.io/limit-rps: '30'
spec:
  rules:
    - host: api.seguros.vitta.com.br
      http:
        paths:
          # - path: /api/v1/test(\?.*|\/\?.*)
          - path: /api/v1/sales
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  name: http
